--- a/src/app/features/store-detail/components/actions/actions.component.html
+++ b/src/app/features/store-detail/components/actions/actions.component.html
@@ -1,48 +1,42 @@
-<!---->
-<div class="container title-section c-color-bg">
-  <div class="d-flex justify-content-center">
-    <span class="title-name">Sobre nosotros</span>
-  </div>
-  <div class="d-flex justify-content-center">
+<div class="container has-text-centered has-padding-t-2 has-padding-b-2">
+  <div class="title-section">
+    <p class="title-name">Sobre nosotros</p>
     <div class="title-line"></div>
   </div>
-  <p class="paragraph-store parrafo-regular">{{data.store.descriptionStore}}</p>
+  <p class="has-margin-2">{{data.store.descriptionStore}}</p>
 </div>
 
 <!--Sección video e información del negocio-->
-<div class="container-fluid container-actions c-color-bgr">
-  <div class="container c-color-bgr">
-    <div class="row">
-      <div class="col-md-6">
-        <!-- <div class="container-description-store">{{description}}</div> -->
+<div class="info-video">
+  <div class="container">
+    <div class="columns">
+      <div class="column is-6 is-flex flex-center-v">
         <p class="parrafo-regular">{{data.store.descriptionVideo}}</p>
       </div>
-
-      <div class="col-md-6 video">
+      <div class="column is-6">
         <!-- If video exist -->
-        <div *ngIf="data.store.urlVideo" class="video-play">
-          <img src="../../../assets/img/videoNGX.png" alt="" width="100%" height="100%">
+        <div class="video-play">
+          <!-- <div *ngIf="data.store.urlVideo" class="video-play"> // THIS IS TEMPORAL -->
+          <!-- HERE IT'S NEED CODE VIDEO -->
+          <img src="https://img.youtube.com/vi/88NPJsceU_8/sddefault.jpg" alt="">
           <div class="button-play" (click)="showVideo(video)">
             <span class="icon-play"></span>
             <div class="button-animation"></div>
           </div>
         </div>
 
-        <!-- If video is null -->
-        <div *ngIf="!data.store.urlVideo" class="video-play marcar">
+        <!-- If video is null // THIS IS TEMPORAL-->
+        <!-- <div *ngIf="!data.store.urlVideo" class="video-play marcar">
           <img src={{url+data.store.urlVideoImage}} alt="" width="100%" height="100%">
-        </div>
-        <!-- <img src={{url+data.store.urlVideoImage}} alt="" width="100%" height="100%"> -->
+        </div> -->
       </div>
     </div>
   </div>
-
 </div>
-<br>
 
 <!-- video -->
-<ng-template #video let-c="close" let-d="dismiss">
-  <div class="modal-body modal-video">
+<ng-template #video>
+  <div class="video">
     <iframe width="100%" [src]="urlVideo | safe: 'resourceUrl'" frameborder="0" allowfullscreen class="show-video"></iframe>
   </div>
 </ng-template>
