--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,97 @@
 body {
   font-size: $font-size;
 }
+.section {
+  padding: 1.5rem !important;
+}
+.columns {
+  margin: 0 !important;
+}
+
+.title-section {
+  text-align: center;
+  margin-bottom: 1.5rem;
+  .title-name {
+    font-size: 1.6rem;
+  }
+
+  .title-line {
+    width: 3.5rem;
+    border-bottom: 2.3px solid $primary;
+    margin: auto;
+  }
+  &.white {
+    .title-name {
+      color: white !important;
+    }
+
+    .title-line {
+      border-color: white;
+    }
+  }
+}
+.flex-center-v {
+  align-items: center;
+}
+
+
+/* ----- Title section ----- */
+// .title-section {
+//   padding-bottom: 40px;
+
+//   .title-name {
+//     font-size: 1.6rem;
+//     padding-top: 45px;
+//     margin: auto;
+//   }
+
+//   .title-line {
+//     width: 5%;
+
+//     &.w-10 {
+//       width: 10%;
+//     }
+//   }
+
+//   &.white {
+//     .title-name {
+//       color: white !important;
+//     }
+
+//     .title-line {
+//       border-color: white;
+//     }
+//   }
+// }
+
+/* ----- End title section ----- */
+@media (max-width: 575px) {
+  .title-section {
+    .title-name {
+      font-size: 1.2rem;
+    }
+
+    .title-line {
+      width: 10%;
+    }
+  }
+}
+
+.title-section-store {
+  font-size: 1.2rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 /* ----------- forms ----------- */
 input:focus,
 select:focus,
@@ -61,11 +152,11 @@ button:focus {
 /* ------ End Columns ------ */
 
 
-.title-section {
-  padding-top: 10px;
-  padding-bottom: 25px;
-  color: #2A2f39;
-  letter-spacing: 0.03rem;
-  font-size: 1.1rem;
-  @include is-bold;
-}
+// .title-section {
+//   padding-top: 10px;
+//   padding-bottom: 25px;
+//   color: #2A2f39;
+//   letter-spacing: 0.03rem;
+//   font-size: 1.1rem;
+//   @include is-bold;
+// }
