--- a/src/app/features/store-detail/components/contact/contact.component.html
+++ b/src/app/features/store-detail/components/contact/contact.component.html
@@ -1,5 +1,5 @@
-<div class="container-contact pb-5">
-  <div class="container-fluid">
+<div class="container-contact has-padding-t-3 has-padding-b-3">
+  <div class="container">
     <div class="title-section white">
       <div class="d-flex justify-content-center">
         <span class="title-name">Contacto</span>
@@ -7,59 +7,46 @@
       <div class="d-flex justify-content-center">
         <div class="title-line"></div>
       </div>
-      <div class="d-flex justify-content-center text-nro-sucursales">({{countBranchStore}}&nbsp; <span *ngIf="countBranchStore==1">sucursal)</span><span
-          *ngIf="countBranchStore>1">sucursales)</span></div>
+      <div class="d-flex justify-content-center text-nro-sucursales">({{countBranchStore}}&nbsp;
+        <span *ngIf="countBranchStore==1">sucursal)</span>
+        <span *ngIf="countBranchStore>1">sucursales)</span>
+      </div>
     </div>
-  </div>
-  <div id="map" class="mapa "></div>
-  <br>
-  <!-- <div class="locations" [ngClass]="{ 'no-mobile': showBranch }" (window:resize)="onResize($event)"> P-->
-  <div class="contact-data-store">
-    <!--N-->
     <!-- Address business store -->
-    <div class="container branch-offices">
-      <div class="row d-flex justify-content-center">
-        <div *ngFor="let branchStore of data; let idx = index" class="col-md-4 branch">
-          <div class="title-address"> SUCURSAL {{idx+1}} </div>
+    <div class="columns">
+      <div class="column">
+        <div id="map" class="mapa"></div>
+      </div>
+      <div class="column data-branch">
+        <div *ngFor="let branchStore of data; let idx = index" class="branch">
+          <div class="has-text-weight-bold"> SUCURSAL {{idx+1}} </div>
           <div class="detail">
             <div (click)="selectBranchStore(branchStore)" class="detail">
               <i class="location-1icon-"></i> <span>{{branchStore.address}}</span>
             </div>
             <div class=""><i class="phone-2icon-"></i> <span>Tel.{{branchStore.cellphoneBranchStore}}</span></div>
-            <div><i class="clockicon-"></i>Horarios de Atención</div>
+
+            <p class="has-margin-t-4 has-text-weight-bold">HORARIOS DE ATENCIÓN</p>
+
             <div *ngIf="mondayToFriday">
-              Lunes a Viernes
-              <span>{{mondayToFriday.hourBeginOne}} - {{mondayToFriday.hourEndOne}}</span><br />
+              <i class="clockicon-"></i> Lunes a Viernes
+              <span>{{mondayToFriday.hourBeginOne}} - {{mondayToFriday.hourEndOne}}</span>,
               <span>{{mondayToFriday.hourBeginTwo}} - {{mondayToFriday.hourEndTwo}}</span>
             </div>
             <div *ngIf="saturday">
-              Sábado
-              <span>{{saturday.hourBeginOne}} - {{saturday.hourEndOne}}</span><br />
+              <i class="clockicon-"></i> Sábado
+              <span>{{saturday.hourBeginOne}} - {{saturday.hourEndOne}}</span>,
               <span>{{saturday.hourBeginTwo}} - {{saturday.hourEndTwo}}</span>
             </div>
             <div *ngIf="sunday">
-              Domingo
-              <span>{{sunday.hourBeginOne}} - {{sunday.hourEndOne}}</span><br />
+              <i class="clockicon-"></i> Domingo
+              <span>{{sunday.hourBeginOne}} - {{sunday.hourEndOne}}</span>,
               <span>{{sunday.hourBeginTwo}} - {{sunday.hourEndTwo}}</span>
             </div>
           </div>
-          <!-- <div>{{branchStore.listSchedule.}}</div> -->
-          <!-- Popover Template (Schedule) -->
-          <ng-template #scheduleContent>
-            <button (click)="p.close()" class="btn btn-primary">Close</button>
-            <div *ngFor="let item of branchStore.listSchedule">
-              <div *ngIf="item.enabled">
-                <span>{{day[item.daySchedule]}}</span><br />
-                <span *ngIf="item.hourBeginOne">{{item.hourBeginOne| date:'shortTime'}} - {{item.hourEndOne|
-                  date:'shortTime'}}</span><br />
-                <span *ngIf="item.hourBeginTwo">{{item.hourBeginTwo| date:'shortTime'}} - {{item.hourEndTwo|
-                  date:'shortTime'}}</span>
-              </div>
-            </div>
-          </ng-template>
         </div>
       </div>
     </div>
+    <!-- End Address business store -->
   </div>
-  <!-- End Address business store -->
 </div>
