--- a/src/app/features/store-detail/components/head-store/head-store.component.html
+++ b/src/app/features/store-detail/components/head-store/head-store.component.html
@@ -1,7 +1,7 @@
 <!--menu-store-->
 <nav class="navbar is-fixed-top" [ngClass]="{active: isActive}">
   <div class="container">
-    <div class="navbar-brand">
+    <div class="navbar-brand is-marginless">
       <a class="navbar-item">
         <img src={{url+data.store.urlLogoStore}}>
       </a>
@@ -11,7 +11,7 @@
         <span></span>
       </span>
     </div>
-    <div class="navbar-menu" [ngClass]="{'is-active': isActive}">
+    <div class="navbar-menu is-marginless" [ngClass]="{'is-active': isActive}">
       <div class="navbar-end">
         <a class="navbar-item" (click)="triggerScrollTo('home')"><span>Inicio</span></a>
         <a class="navbar-item" (click)="triggerScrollTo('actions')"><span>Nosotros</span></a>
