--- a/src/app/features/store-detail/components/catalogue/catalogue.component.scss
+++ b/src/app/features/store-detail/components/catalogue/catalogue.component.scss
@@ -1,6 +1,5 @@
-/*===   19/04/2018   ===*/
-/* Buscador de producto en catalogo*/
 @import "_utils.scss";
+@import "mixins";
 $themes: $themes;
 
 @each $key in $themes {
@@ -11,42 +10,6 @@ $themes: $themes;
   }
 }
 
-.input-seeker {
-  padding: 0;
-  width: 70%;
-  margin-top: 5px;
-  height: 37px;
-  border-radius: 5px;
-  overflow: hidden;
-  border: 1px solid rgb(23, 158, 165);
-  border: 1px solid rgb(217, 217, 219);
-  background-color: #EBEBEB;
-}
-
-.input-search {
-  height: 35px;
-  border: none;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 0.8rem;
-}
-
 .button-vermas {
   padding-bottom: 45px;
-}
-
-/*===   Media queries   ===*/
-
-@media (max-width: 575px) {
-  .input-seeker {
-    padding: 0;
-    width: 100%;
-  }
-
-  .line-title {
-    width: 10%;
-  }
-
-  .title-section-store {
-    font-size: 1.2rem;
-  }
 }
