--- a/src/app/features/search-result/components/product-card/product-card.component.scss
+++ b/src/app/features/search-result/components/product-card/product-card.component.scss
@@ -1,8 +1,6 @@
 .product-card {
   &.card {
-    margin-top: 10px;
-    margin-right: 10px;
-    margin-left: 10px;
+    margin: 10px 10px 7px;
     border: 1px solid rgb(229, 230, 231);
     border-radius: 2px;
     box-shadow: 2px 4px 4px -3px rgba(0, 0, 0, 0.3);
@@ -20,6 +18,7 @@
     }
 
     .card-image {
+      overflow: hidden;
       .promotion-image {
         background-size: 100% 100%;
         background-repeat: no-repeat;
