--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,58 +1,14 @@
-/* 11/03/2018 */
-.navbar {
-    background-color: #2A2f39;
-    .container{
-        background-color: #2A2f39;
-        padding-top:3px;
+@import "mixins";
+
+@include touch {
+  .navbar-menu {
+    background: none;
+    box-shadow: none;
+    display: block;
+    .navbar-end {
+      display: flex;
+      justify-content: flex-end;
+
     }
-}
-
-.header{
-  height: 100%;
-  padding-top:5px;
-  min-height:65px;
-}
-
-.style-select{
-  margin:10px;
-  margin-top:20px;
-  height:21px;
-  overflow: hidden;
-  background-color:#2A2f39;
-  width:45%;
-
   }
-
-  .style-select select:focus{
-    outline:none;
-  }
-
-.header-negocio {
-  background: black;
-  z-index: 999;
-  color: white;
-  position: fixed;
-  width: 100%;
-}
-li.item {
-  list-style: none;
-  display: inline-block;
-  margin: 5px;
-  text-transform: uppercase;
-  margin: 16px 18px 12px;
-  padding: 0;
-  letter-spacing: 0.05em;
-}
-
-/* ==== MEDIA QUERIES  ==== */
-
-/* Mobile */
-@media (max-width: 576px) {
-  div.container{
-    padding:0 20px;
-    padding-top:5px;
-  }
-}
-
-@media (min-width: 576px) {
 }
