--- a/src/app/features/main-search/components/page/page.component.html
+++ b/src/app/features/main-search/components/page/page.component.html
@@ -1,37 +1,43 @@
+<div class="bg"></div>
+<div class="bg bg2"></div>
+<div class="bg bg3"></div>
 <div class="content-search-main">
         <div class="has-text-centered">
-                <img class="img-ngx" src="assets/img/lNegux.png">
+                <img class="img-ngx has-margin-b-4" src="assets/img/lNegux.png">
                 <input-seeker></input-seeker>
-        </div>
-        <div class="column is-4 has-text-centered is-half is-offset-one-quarter m-auto">
-                <div class="field is-grouped is-grouped-centered is-4 justify-content-between">
-                        <div class="has-text-centered">
-                                <i class="desktopicon-"></i>
-                                <br>
-                                <span>Electrodo...</span>
+                <div class="columns is-flex">
+                        <div class="column is-one-quarter-mobile">
+                                <div class="option is-flex-column">
+                                        <i class="desktopicon-"></i>
+                                        <span class="is-hidden-mobile-extra">Electrodomésticos</span>
+                                </div>
                         </div>
-                        <div class="has-text-centered">
-                                <i class="food-1icon-"></i>
-                                <br>
-                                <span>Comidas</span>
+                        <div class="column is-one-quarter-mobile">
+                                <div class="option is-flex-column">
+                                        <i class="food-1icon-"></i>
+                                        <span class="is-hidden-mobile-extra">Comidas</span>
+                                </div>
                         </div>
-                        <div class="has-text-centered">
-                                <i class="toolsicon-"></i>
-                                <br>
-                                <span>Herramientas</span>
+                        <div class="column is-one-quarter-mobile">
+                                <div class="option is-flex-column">
+                                        <i class="toolsicon-"></i>
+                                        <span class="is-hidden-mobile-extra">Herramientas</span>
+                                </div>
                         </div>
-                        <div class="has-text-centered">
-                                <i class="bicycleicon-"></i>
-                                <br>
-                                <span>Deportes</span>
+                        <div class="column is-one-quarter-mobile">
+                                <div class="option is-flex-column">
+                                        <i class="bicycleicon-"></i>
+                                        <span class="is-hidden-mobile-extra">Deportes</span>
+                                </div>
                         </div>
                 </div>
         </div>
-        <div class="main-text mt-3">
+        <div class="main-text has-margin-t-4">
                 Ahora es más facil localizar el
                 <br>producto que necesitas
         </div>
 </div>
+<div class="mary"></div>
         <!-- <div class="container-fluid content-search-main">
                 <div  class="row">
                         <div  class="col-12 col-md-4 offset-md-4 col-lg-4 offset-lg-4 d-flex justify-content-center">
