--- a/src/app/shared/countries-list/countries-list.component.html
+++ b/src/app/shared/countries-list/countries-list.component.html
@@ -5,7 +5,7 @@
         <img class="container-logo" (click)="goToMainSearcher()"  src="assets/img/logoNGXWhite.png">
         <img class="container-text-logo" (click)="goToMainSearcher()"  src="assets/img/textNGXWhite.png">
       </div>
-      <div class="style-select" *ngIf="isMainSearch">
+      <div class="select" *ngIf="isMainSearch">
       <select class="" id="country" (change)="onChange($event.target.value)">
         <option *ngFor="let country of countries" [value]="country?.idCountry">{{country?.nameCountry}}</option>
       </select>
@@ -18,8 +18,9 @@
     </div> -->
   
     <!-- Without authentification -->
-    <div class="style-select" [hidden]="true">
+    <!-- TODO is this necessary? -->
+    <!-- <div class="style-select" [hidden]="true">
       <select class="" id="country" (change)="onChange($event.target.value)">
         <option *ngFor="let country of countries" [value]="country?.idCountry">{{country?.nameCountry}}</option>
       </select>
-    </div>
+    </div> -->
