--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -26,17 +26,29 @@
 </div> -->
 
 <!-- Without session -->
-<nav class="navbar bd-structure-item bd-is-structure-container" title="level" *ngIf="isMainSearcher && !isBussines">
-  <div class="container level">
-    <div class="level-left bd-structure-item" title="level-left">
-      <div class="level-item">
-        <countries-list [isMainSearch]="isMainSearcher"></countries-list>
+<nav class="navbar is-transparent is-fixed-top" title="level" *ngIf="isMainSearcher && !isBussines">
+  <!-- <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" (click)="showMenu=!showMenu" [ngClass]="{'is-active': showMenu}">
+    <span aria-hidden="true"></span>
+    <span aria-hidden="true"></span>
+    <span aria-hidden="true"></span>
+  </a> -->
+  <div class="container">
+    <!-- <div class="navbar-menu" [ngClass]="{'is-active': showMenu}"> -->
+    <div class="navbar-menu">
+      <div class="navbar-start">
+        <!-- <countries-list [isMainSearch]="isMainSearcher"></countries-list> -->
+      </div>
+      <div class="navbar-end">
+        <app-profile-options></app-profile-options>
       </div>
     </div>
-    <div class="level-right bd-structure-item" title="level-right">
-      <!-- <profile-options></profile-options> -->
-    </div>
+
   </div>
+  <!-- <div class="container level">
+    <div class="level-right bd-structure-item" title="level-right">
+      <profile-options></profile-options>
+    </div>
+  </div> -->
 </nav>
 
 
