main search with dinamyc background

--- a/src/app/features/main-search/components/page/page.component.html
+++ b/src/app/features/main-search/components/page/page.component.html
@@ -1,69 +1,43 @@
-<div class="bg"></div>
-<div class="bg bg2"></div>
-<div class="bg bg3"></div>
-<div class="content-search-main">
-        <div class="has-text-centered">
-                <img class="img-ngx has-margin-b-4" src="assets/img/lNegux.png">
-                <input-seeker></input-seeker>
-                <div class="columns is-flex">
-                        <div class="column is-one-quarter-mobile">
-                                <div class="option is-flex-column">
-                                        <i class="desktopicon-"></i>
-                                        <span class="is-hidden-mobile-extra">Electrodomésticos</span>
-                                </div>
-                        </div>
-                        <div class="column is-one-quarter-mobile">
-                                <div class="option is-flex-column">
-                                        <i class="food-1icon-"></i>
-                                        <span class="is-hidden-mobile-extra">Comidas</span>
-                                </div>
-                        </div>
-                        <div class="column is-one-quarter-mobile">
-                                <div class="option is-flex-column">
-                                        <i class="toolsicon-"></i>
-                                        <span class="is-hidden-mobile-extra">Herramientas</span>
-                                </div>
-                        </div>
-                        <div class="column is-one-quarter-mobile">
-                                <div class="option is-flex-column">
-                                        <i class="bicycleicon-"></i>
-                                        <span class="is-hidden-mobile-extra">Deportes</span>
-                                </div>
-                        </div>
-                </div>
+<div #content class="search-main">
+  <div class="bg"></div>
+  <div class="bg bg2"></div>
+  <div class="bg bg3"></div>
+  <div class="bg-image"></div>
+  <div class="cover"></div>
+  <div class="content-search-main">
+    <div class="has-text-centered">
+      <img class="img-ngx has-margin-b-4" src="assets/img/lNegux.png">
+      <input-seeker></input-seeker>
+      <div class="columns is-flex">
+        <div class="column is-one-quarter-mobile">
+          <div class="option is-flex-column">
+            <i class="desktopicon-"></i>
+            <span class="is-hidden-mobile-extra">Electrodomésticos</span>
+          </div>
         </div>
-        <div class="main-text has-margin-t-4">
-                Ahora es más facil localizar el
-                <br>producto que necesitas
+        <div class="column is-one-quarter-mobile">
+          <div class="option is-flex-column">
+            <i class="food-1icon-"></i>
+            <span class="is-hidden-mobile-extra">Comidas</span>
+          </div>
         </div>
+        <div class="column is-one-quarter-mobile">
+          <div class="option is-flex-column">
+            <i class="toolsicon-"></i>
+            <span class="is-hidden-mobile-extra">Herramientas</span>
+          </div>
+        </div>
+        <div class="column is-one-quarter-mobile">
+          <div class="option is-flex-column">
+            <i class="bicycleicon-"></i>
+            <span class="is-hidden-mobile-extra">Deportes</span>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="main-text has-margin-t-4 is-flex-columns">
+      <span>Ahora es más facil localizar el</span>
+      <span>producto que necesitas</span>
+    </div>
+  </div>
 </div>
-<div class="mary"></div>
-        <!-- <div class="container-fluid content-search-main">
-                <div  class="row">
-                        <div  class="col-12 col-md-4 offset-md-4 col-lg-4 offset-lg-4 d-flex justify-content-center">
-                                <div><img class="img-ngx" src="assets/img/lNegux.png"></div>
-                        </div>
-                </div>
-                 <div class="row ">
-                    <div class="col-12 col-md-4 offset-md-4 col-lg-4 offset-lg-4">
-                      <input-seeker></input-seeker>
-                    </div>
-                </div>
-                <br>
-                <div class="d-none d-md-block">
-                    <div class="row">
-                            <div class="col-md-4 col-lg-4 offset-md-4 offset-lg-4 d-md-inline-block d-md-flex justify-content-between">
-                                        <div class="d-md-inline-block text-md-center"><i class="desktopicon-"></i><br><span>Electrodo...</span></div>
-                                        <div class="d-md-inline-block text-md-center"><i class="food-1icon-"></i><br><span>Comidas</span></div>
-                                        <div class="d-md-inline-block text-md-center"><i class="toolsicon-"></i><br><span>Herramientas</span></div>
-                                        <div class="d-md-inline-block text-md-center"><i class="bicycleicon-"></i><br><span>Deportes</span></div>
-                            </div>
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                        <div class="col-12   col-md-6 offset-md-3 col-lg-6 offset-lg-3 fos-light main-text">
-                                Ahora es más facil localizar el<br>producto que necesitas
-                        </div>
-                </div>
-        </div> -->
