--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,69 +1,19 @@
-
-<!-- Desktop -->
-<nav class="navbar d-none d-sm-block" *ngIf="!isMainSearcher && !isBussines">
-  <div class="container">
-    <div class="columns">
-      <countries-list class="column is-three-quarters-mobile is-two-thirds-tablet is-one-quarter-fullhd" [isMainSearch]="isMainSearcher"></countries-list>
-      <input-seeker class="column is-9" [classs]="'input-header'"></input-seeker>
-      <!-- <div class="column col-sm-4 col-md-5 col-lg-4">
-        <profile-options></profile-options>
-      </div> -->
+<nav class="navbar is-dark is-fixed-top" [ngClass]="{'is-transparent': isMainSearcher}" title="level" *ngIf="!isBussines">
+  <div class="container is-flex">
+    <div class="navbar-brand" *ngIf="!isMainSearcher">
+      <a class="navbar-item" href="/">
+        <img class="logo-icon" src="assets/img/logoNGXWhite.png" width="20" height="15">
+        <img class="is-hidden-mobile" src="assets/img/textNGXWhite.png" width="65" height="15">
+      </a>
     </div>
-  </div>
-</nav>
-
-<!-- Mobile -->
-<!-- <div class="container d-sm-none header" *ngIf="!isMainSearcher && !isBussines">
-  <div class="row flex-wrap align-content-center">
-    <countries-list class="col-2" [isMainSearch]="isMainSearcher"></countries-list>
-    <div class="col-10"> -->
-      <!-- <profile-options></profile-options> -->
-    <!-- </div>
-  </div>
-  <div class="row"> -->
-    <!-- <input-seeker-header class="col-12"></input-seeker-header> -->
-  <!-- </div>
-</div> -->
-
-<!-- Without session -->
-<nav class="navbar is-transparent is-fixed-top" title="level" *ngIf="isMainSearcher && !isBussines">
-  <div class="container">
     <div class="navbar-menu">
       <div class="navbar-start">
         <!-- <countries-list [isMainSearch]="isMainSearcher"></countries-list> -->
       </div>
       <div class="navbar-end">
+        <input-seeker [classs]="'no-main'" *ngIf="!isMainSearcher"></input-seeker>
         <app-profile-options></app-profile-options>
       </div>
     </div>
-
   </div>
-  <!-- <div class="container level">
-    <div class="level-right bd-structure-item" title="level-right">
-      <profile-options></profile-options>
-    </div>
-  </div> -->
 </nav>
-
-
-<!-- <nav class="navbar">
-  <div class="container">
-    <div class="columns level" *ngIf="isMainSearcher && !isBussines">
-      <div class="column is-2 is-half">
-        <countries-list [isMainSearch]="isMainSearcher"></countries-list>
-      </div>
-      <div class="column is-10 level-right">
-        <profile-options></profile-options>
-      </div>
-    </div>
-  </div>
-</nav> -->
-
-<!-- <div class="container header" *ngIf="isMainSearcher && !isBussines">
-  <div class="row flex-wrap align-content-center">
-    <countries-list [isMainSearch]="isMainSearcher"></countries-list>
-    <div class="col-10 col-md-9 col-lg-9">
-      <profile-options></profile-options>
-    </div>
-  </div>
-</div> -->
