--- a/src/app/features/search-result/pages/page.component.html
+++ b/src/app/features/search-result/pages/page.component.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section has-margin-t-1 has-padding-7">
   <div class="container c-color-bg" *ngIf="loading">
     <div class="main-content"></div>
   </div>
