--- a/src/app/shared/slider/slider.component.scss
+++ b/src/app/shared/slider/slider.component.scss
@@ -1,185 +1,108 @@
-.bannerStyle div {
-  background-color: #ccc;
-  background-size: cover !important;
-  height: 100%;
+@import "mixins";
+
+.container-carousel {
+  padding: 5px;
 }
 
-.bannerStyle img {
+.carousel {
+  margin-top: 10px;
+}
+
+.recomend {
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px;
+  .option {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .data {
+    padding: 0 15px;
+  }
+}
+
+.control-slider {
+  margin-top: 10px;
+}
+
+.slide {
   width: 100%;
-  height: 100%;
+  padding-bottom: 5px;
 }
 
-.bannerStyle h1 {
+.buttom-control {
+  border: 1px solid #2a2f39;
+  color: #2a2f39;
+  border-radius: 50px;
+  height: 40px;
+  width: 40px;
   text-align: center;
-  background: rgba(0, 0, 0, 0.32);
-  color: white;
-  margin: 0;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  font-size: 18px;
+  padding: 5px 0;
 }
 
-.tile {
-  min-height: 200px;
-  background-color: #ccc;
-  background-size: cover !important;
+.buttom-control:hover {
+  cursor: pointer;
 }
 
-.tile h1 {
-  text-align: center;
-  line-height: 200px;
-  background: rgba(0, 0, 0, 0.32);
-  color: white;
-  margin: 0;
+.shadow-img {
+  border-top: 1px solid #F2F3F7;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15), 0 3px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 3px;
 }
 
-h4 {
-  margin: 0;
-  padding: 10px 15px;
-  text-align: center;
+.name-store-slider {
+  font-size: 0.75rem;
 }
 
-p {
-  margin: 0;
-  padding: 0 15px 10px;
-  text-align: center;
+@include mobile-extra {
+  .buttom-control {
+    height: 35px;
+    width: 35px;
+    padding: 2px 5px;
+  }
+  .is-two-thirds-mobile {
+    max-width: 66%;
+  }
 }
 
-.wBg {
-  background: white;
+/* Extra small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+  .slick-slide img {
+    width: 75px;
+    height: 75px;
+  }
 }
 
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+  .slick-slide img {
+    width: 75px;
+    height: 75px;
+  }
 }
 
-nav {
-  border-bottom: 1px solid #ccc;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  background: white;
-  z-index: 12;
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .slick-slide img {
+    width: 80px;
+    height: 80px;
+  }
 }
 
-nav h1 {
-  margin: 0;
-  padding: 10px;
-  text-align: center;
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .slick-slide img {
+    width: 100px;
+    height: 100px;
+  }
 }
 
-.carBtn {
-  position: absolute;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  width: 50px;
-  height: 50px;
-  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.3);
-  border-radius: 999px;
-}
-
-.leftRs {
-  position: absolute;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  width: 50px;
-  height: 50px;
-  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.3);
-  border-radius: 999px;
-  left: 0;
-}
-
-.rightRs {
-  position: absolute;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  width: 50px;
-  height: 50px;
-  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.3);
-  border-radius: 999px;
-  right: 0;
-}
-
-.leftRs1 {
-  position: absolute;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  width: 50px;
-  height: 50px;
-  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.3);
-  border-radius: 999px;
-  right: 0;
-}
-
-.rightRs1 {
-  position: absolute;
-  margin: auto;
-  top: 0;
-  bottom: 0;
-  width: 50px;
-  height: 50px;
-  box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.3);
-  border-radius: 999px;
-  left: 0;
-}
-
-.myPoint {
-  list-style-type: none;
-  text-align: center;
-  padding: 12px;
-  margin: 0;
-  white-space: nowrap;
-  overflow: auto;
-  box-sizing: border-box;
-}
-.myPoint  li {
-    display: inline-block;
-    border-radius: 50%;
-    border: 2px solid rgba(0, 0, 0, 0.55);
-    padding: 4px;
-    margin: 0 3px;
-    transition-timing-function: cubic-bezier(0.17, 0.67, 0.83, 0.67);
-    transition: 0.4s;
-}
-.myPoint  li.active {
-      background: #6b6b6b;
-      transform: scale(1.2);
-    }
-
-.carouselHoved {
-  opacity: 0.4;
-}
-
-.myBannerPoint {
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  left: 0;
-  bottom: 0;
-  padding: 0;
-  color: beige;
-  justify-content: center;
-  list-style-type: none;
-  background: rgba(0, 0, 0, 0.34);
-  margin: 0;
-  padding: 10px;
-  box-sizing: border-box;
-}
-.myBannerPoint li {
-    background: #6b6b6b;
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;
-}
-.myBannerPoint li.active {
-      transform: translateY(-10px);
-      transition: .3s ease all;
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  .slick-slide img {
+    width: 120px;
+    height: 120px;
+  }
 }
